Added Better Comments for readability

--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Loading"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -110,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Encode Labels"
+    "## Encode Labels - because model understands numbers not text"
    ]
   },
   {
@@ -459,6 +466,13 @@
     "        prediction_value = -1\n",
     "\n",
     "    return prediction_value,prediction_probability\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reassign textual labels back to the output for readability"
    ]
   },
   {
